# wfg_rs

./: .gitignore  Cargo.toml  LICENCE  README.md
src/: lib.rs  pareto.rs  sort.rs  wfg.rs
