[package]
authors = ["Thomas Firmin"]
name = "wfg_rs"
version = "1.0.1"
edition = "2024"
license = "CECILL-C"
readme = "README.md"
rust-version = "1.91.1"
repository = "https://github.com/ThomasFirmin/wfg_rs"
documentation = "https://docs.rs/wfg_rs/latest/wfg_rs/"
description  = "A Rust-ndarray implementation of the WFG hypervolume algorithm for multi-objective optimization."
keywords     = ["multi-objective", "optimization", "hypervolume", "wfg", "pareto"]

[dependencies]
ndarray = { version = "0.17.2", default-features = false}
num = { version = "0.4.3", default-features = false, features = ["libm"] }
